v1.4.3
In the map child categories should be checked/unchecked when parent category is checked/unchecked - FIXED
Sorting by title not working correctly - FIXED
Added $post_id param to action 'geodir_update_postrating' - ADDED
Removed preview button from backend for GD posts, was causing bugs - CHANGED

v1.4.2
Google api establishment term can override street address - FIXED
Added action geodir_infowindow_meta_after to infowindow - ADDED
On home page map css class added to highlight searched post type - FIXED
Popular category count not working with ajax - FIXED
In backend geodirectory style conflicts with some themes style - FIXED
Sort by most reviews not working in widget and shortcode popular post view - FIXED
Validation added for custom permalinks in GD -> General -> Permalinks - FIXED
All Listings virtual page removed - CHANGED
Shortcode added for best of widget - ADDED
Recent reviews widget ratings stars color not changed with multirating color setting - FIXED
geodir_curPageURL() changed slightly for https url's, we no longer add the port number - CHANGED
Shortcode added for to display GeoDirectoy Listings with pagination - ADDED
Marker cluster not working in maps added via shortcode - FIXED
Add to fav/remove from fav text now filterable - ADDED
Awesome font upgraded with new Awesome font version 4.3.0 - ADDED
After searching for a city not able to search city again without clearing Near input box - FIXED
Custom fields texts translation added - FIXED
[#from_email#] added as a shortcode in notification templates - ADDED

v1.4.1
Distances to listings should show miles/km until 0.01 rather than 1 before changing to ft/m - FIXED
Function geodir_save_listing() now unsets the listing session before returning - CHANGED
Error in google review rich snippets when review rating manager plugin not active - FIXED
Some DocBlocks added for documentation - ADDED

v1.4.0
New user registration disabled error not showing because of &amp; - FIXED