@@ -133,7 +133,7 @@ add_filter('wp_page_menu', 'geodir_pagemenu_items', 100, 2);
 /* ON TEMPLATE INCLUDE */
 /////////////////////////
 
-add_filter('template_include', 'geodir_template_loader');
+add_filter('template_include', 'geodir_template_loader',9);
 
 /////////////////////////
 /* CATEGORY / TAXONOMY / CUSTOM POST ACTIONS */
